--- a/about.html
+++ b/about.html
@@ -21,127 +21,43 @@
                 position: relative; /* Ensures z-index works on the child div */
                 z-index: 50; /* Above the overlay */
             }
+
+            .video-container {
+    display: flex;
+    justify-content: center;
+}
+
+iframe {
+aspect-ratio: 19/9;
+    width: 100% !important;
+}
+
             </style>
 
     </head>
     <body class="font-light tracking-wider text-gray-600 leading-8">
 
-        <nav class="bg-white shadow fixed w-full z-50 top-0 py-4 text-skin">
-            <div class="mx-auto max-w-7xl px-2 sm:px-4 lg:px-8">
-                <div class="flex h-12 justify-between">
-                    <div class="flex px-2 lg:px-0 justify-between w-full">
-                        <a href="https://aiidee.com.tw"
-                            class="flex flex-shrink-0 items-center">
-                            <img class="logo-white block w-36"
-                                src="./nav-logo.png"
-                                alt="Company name">
-                        </a>
-                        <div id="list"
-                            class="text-sm items-center hidden lg:ml-6 lg:flex lg:space-x-8">
-                            <!-- Current: "border-indigo-500 ", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
-                            <a href="#"
-                                class="items-center0 border-b-2 border-transparent px-1 pt-1 font-medium  hover:border-gray-300 hover:text-gray-70 border-sky-700 ">首頁</a>
-
-                            <div class="dropdown">
-                                <button
-                                    class="dropbtn items-center border-b-2 border-transparent px-1 pt-1 font-medium  hover:border-gray-300 ">診療項目</button>
-                                <div class="dropdown-content">
-                                    <a
-                                        href="#">全口重建</a>
-                                    <a
-                                        href="#">微創植牙</a>
-                                    <a
-                                        href="#">隱適美</a>
-                                    <a
-                                        href="#">美白貼片</a>
-                                    <a
-                                        href="#">全瓷冠</a>
-                                    <a
-                                        href="#">冷光美白</a>
-                                    <a
-                                        href="#">牙周治療</a>
-                                </div>
-                            </div>
-                            <a href="#"
-                                class="items-center border-b-2 border-transparent px-1 pt-1 font-medium  hover:border-gray-300  ">關於我們</a>
-                            <a href="#"
-                                class="items-center border-b-2 border-transparent px-1 pt-1 font-medium  hover:border-gray-300  ">醫療團隊</a>
-                            <a href="#"
-                                class="items-center border-b-2 border-transparent px-1 pt-1 font-medium  hover:border-gray-300  ">最新消息</a>
-                            <a href="#"
-                                class="items-center border-b-2 border-transparent px-1 pt-1 font-medium  hover:border-gray-300  ">案例分享</a>
-
-                            <a href="#"
-                                class="items-center border-b-2 border-transparent px-1 pt-1 font-medium  hover:border-gray-300  ">聯絡我們</a>
-                        </div>
-                    </div>
-
-                    <div class="flex items-center lg:hidden">
-                        <!-- Mobile menu button -->
-                        <button id="menuButton" type="button"
-                            class="inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
-                            aria-controls="mobile-menu" aria-expanded="false">
-                            <span class="sr-only">Open main menu</span>
-                            <svg
-                                class="svg-icon fill-current text-gray-500  block h-6 w-6"
-                                xmlns="http://www.w3.org/2000/svg" fill="none"
-                                viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" aria-hidden="true">
-                                <path stroke-linecap="round"
-                                    stroke-linejoin="round"
-                                    d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"></path>
-                            </svg>
-
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Mobile menu, show/hide based on menu state. -->
-            <div
-                class="hidden lg:hidden border-b border-gray-200 bg-white text-gray-600"
-                id="mobile-menu">
-                <div class="space-y-1 pt-2 pb-3">
-                    <!-- Current: "bg-indigo-50 border-indigo-500 text-indigo-700", Default: "border-transparent text-gray-600 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-800" -->
-                    <a href="https://aiidee.com.tw"
-                        class="block border-l-4 border-sky-700 bg-sky-50 py-2 pl-3 pr-4 text-base font-medium text-sky-700">首頁</a>
-                    <a href="https://aiidee.com.tw/about"
-                        class="block border-l-4 border-transparent py-2 pl-3 pr-4 text-base font-medium  hover:border-gray-70 hover:bg-gray-50">關於</a>
-                    <a href="https://aiidee.com.tw/team"
-                        class="block border-l-4 border-transparent py-2 pl-3 pr-4 text-base font-medium  hover:border-gray-70 hover:bg-gray-50">團隊介紹</a>
-                    <a href="https://aiidee.com.tw/services"
-                        class="block border-l-4 border-transparent py-2 pl-3 pr-4 text-base font-medium  hover:border-gray-70 hover:bg-gray-50">服務流程</a>
-                    <a href="https://pse.is/adwebQAup"
-                        class="block border-l-4 border-transparent py-2 pl-3 pr-4 text-base font-medium  hover:border-gray-70 hover:bg-gray-50">預約諮詢</a>
-                    <a href="https://aiidee.com.tw/projects"
-                        class="block border-l-4 border-transparent py-2 pl-3 pr-4 text-base font-medium  hover:border-gray-70 hover:bg-gray-50">作品總覽</a>
-                    <a href="https://aiidee.com.tw/videos-"
-                        class="block border-l-4 border-transparent py-2 pl-3 pr-4 text-base font-medium  hover:border-gray-70 hover:bg-gray-50">影片專區</a>
-                    <a href="https://aiidee.com.tw/news-"
-                        class="block border-l-4 border-transparent py-2 pl-3 pr-4 text-base font-medium  hover:border-gray-70 hover:bg-gray-50">部落格</a>
-                    <a href="https://aiidee.com.tw/contact"
-                        class="block border-l-4 border-transparent py-2 pl-3 pr-4 text-base font-medium  hover:border-gray-70 hover:bg-gray-50">聯絡我們</a>
-                </div>
-            </div>
-        </nav>
-
         <header
-            style="background: url(https://images.pexels.com/photos/7723391/pexels-photo-7723391.jpeg) center/cover; height: 300px;"
+            style="background: url(./img/診所-1.png) center/cover; height:
+            300px;"
             class="relative text-white header-bg-img bg-cover">
             <div
-                class="max-w-4xl top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
+                class="max-w-4xl top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 flex flex-col items-center">
                 <h1
-                    class="text-yellow-500 text-4xl mb-8 text-center z-50 font-medium">關於我們
+                    class=" text-4xl mb-8  z-50 font-medium">關於我們
                 </h1>
+                <a href="#"
+                    class="rounded-xl px-8 py-2 bg-darkskin text-white font-medium">立即預約</a>
             </div>
         </header>
 
-        <section class="container max-w-5xl mx-auto py-8">
+        <section class="container max-w-4xl mx-auto py-8">
             <div class="flex flex-wrap">
                 <div class="w-full px-8">
+                    <div class="flex justify-center my-16">
+                        <img src="nav-logo.png" alt class="w-1/3">
 
-                    <h2
-                        class="py-4 mb-8 text-skin font-medium text-center text-4xl tracking-widest">關於我們</h2>
+                    </div>
                     <p class="mb-8">美德美學醫療集團，自民國67年經營至今在地深耕近40年。
                         創立於1978年，是台中市大里設立的第一間牙醫診所，服務至今，在地深耕超過40年，患者從小孩看到結婚生子，從年輕人看到變成阿公阿嬤，再帶著孫子來就診。老董醫師三個兒子也全部都是醫師，各自在不同領域服務，有牙科也有腎臟科。</p>
 
@@ -166,7 +82,7 @@
         <section class="container max-w-5xl mx-auto py-8 ">
 
             <h2
-                class="py-4 mb-8 text-skin font-medium text-center text-4xl tracking-widest">診所介紹</h2>
+                class="text-3xl text-center font-semibold tracking-tight text-skin sm:text-5xl mb-20">診所介紹</h2>
             <div class="flex flex-wrap">
                 <div class="w-full px-8 sm:w-1/2">
 
@@ -190,17 +106,21 @@
                         數位微笑設計技術與牙齒美學，創立美德美學牙醫診所，希冀以多年累積的美學素養為牙醫專業領域創造不同層次的昇華，讓以往冰冷的牙科醫療更人性、更有溫度，為病患提供更美好的看牙經驗，讓每位病患走出診間時都能綻放發自內心的燦爛笑容。</p>
                 </div>
 
-                <div class="w-full sm:w-1/2 pl-8">
+                <div class="w-full sm:w-1/2 px-4">
                     <img src="./img/關於我們_1.png" alt
                         class="rounded-xl shadow-xl">
                 </div>
             </div>
 
             <div class="flex flex-wrap mt-16">
+                <div class="w-full sm:w-1/2 px-4 ">
+                    <img src="./img/關於我們_2.png" alt
+                        class="rounded-xl shadow-xl">
+                </div>
                 <div class="w-full px-8 sm:w-1/2 ">
 
                     <h3
-                        class="text-skin border-b border-skin mb-8 text-xl pb-4">微笑是最美的底妝<br />
+                        class="text-skin border-b border-skin mb-8 text-xl pb-4 mt-8 sm:mt-0">微笑是最美的底妝<br />
                         Smile is the BEST makeup!</h3>
                     <p
                         class="mb-8">發自內心的微笑不僅散發美麗自信，一抹真誠微笑就能帶來無限美好與燦爛。
@@ -219,10 +139,6 @@
                         數位微笑設計的數位掃描與分析技術，能在輕鬆氣氛下引導您展現最自然的表情，配合多面向的完整評估與溝通，為您雕琢出獨一無二的專屬微笑曲線！</p>
                 </div>
 
-                <div class="w-full sm:w-1/2 pl-8">
-                    <img src="./img/關於我們_2.png" alt
-                        class="rounded-xl shadow-xl">
-                </div>
             </div>
 
             <div class="flex flex-wrap">
@@ -244,11 +160,20 @@
                     </p>
                 </div>
 
-                <div class="w-full sm:w-1/2 pl-8">
+                <div class="w-full sm:w-1/2  px-4 ">
                     <img src="./img/關於我們_3.png" alt
                         class="rounded-xl shadow-xl">
                 </div>
             </div>
+        </section>
+
+        <section class="container max-w-5xl mx-auto py-8 video-container">
+            <iframe
+                src="https://www.youtube.com/embed/MirdfONnO00?si=JbvC2Yxi8GNCn0J7"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen></iframe>
         </section>
     </body>
 </html>
