--- a/homepage.html
+++ b/homepage.html
@@ -927,6 +927,29 @@ height: 90px;}
                                 class="mb-4 flex items-center border-b-4 border-sky-600 pb-4">
                                 美德牙醫診所</li>
                             <li class="flex">
+                                <ul class="mb-2 flex">
+                                    <li>
+                                        <!-- GMAP -->
+                                        <a target="_blank"
+                                            rel="me noopener noreferrer"
+                                            href="#">
+                                            <svg
+                                                class="h-8 w-8 fill-current inline-block mr-1"
+                                                xmlns="http://www.w3.org/2000/svg"
+                                                id="Layer_2" data-name="Layer 2"
+                                                viewBox="0 0 103.96 103.96"><defs><style>.cls-1{fill:#a4adb2}</style></defs><g
+                                                    id="Layer_1-2"
+                                                    data-name="Layer 1"><path
+                                                        d="M51.98 0C23.32 0 0 23.32 0 51.98s23.32 51.98 51.98 51.98 51.98-23.32 51.98-51.98S80.64 0 51.98 0Zm0 100.63c-26.87 0-48.65-21.78-48.65-48.65S25.11 3.32 51.98 3.32s48.65 21.78 48.65 48.66-21.78 48.65-48.65 48.65Z"
+                                                        class="cls-1" /><path
+                                                        d="M69.02 24.81c-4.71-4.71-10.88-7.06-17.04-7.06s-12.34 2.35-17.04 7.06C25.53 34.22 24.29 47.52 33.42 61c4.63 6.85 18.57 23.97 18.57 23.97S65.92 67.84 70.56 61c9.13-13.49 7.89-26.78-1.52-36.19ZM51.98 57.05c-8.01 0-14.51-6.49-14.51-14.51s6.49-14.51 14.51-14.51 14.51 6.49 14.51 14.51S60 57.05 51.98 57.05Z"
+                                                        class="cls-1" /></g></svg>
+                                        </a>
+
+                                    </li>
+                                </ul>
+                            </li>
+                            <li class="flex">
                                 <svg xmlns="http://www.w3.org/2000/svg"
                                     fill="none" stroke="currentColor"
                                     stroke-width="1.5" class="size-6 mr-2"
@@ -950,36 +973,16 @@ height: 90px;}
                             </li>
                             <li>週一 ~ 週五 12:00-19:00PM </li>
                             <li>休息日: 週六 週日</li>
-                            <li class="flex">
-                                <ul class="mt-2 flex">
-                                    <li>
 
-                                        <!-- GMAP -->
-                                        <a target="_blank"
-                                            rel="me noopener noreferrer"
-                                            href="#">
-                                            <svg
-                                                class="h-8 w-8 fill-current inline-block mr-1"
-                                                xmlns="http://www.w3.org/2000/svg"
-                                                id="Layer_2" data-name="Layer 2"
-                                                viewBox="0 0 103.96 103.96"><defs><style>.cls-1{fill:#a4adb2}</style></defs><g
-                                                    id="Layer_1-2"
-                                                    data-name="Layer 1"><path
-                                                        d="M51.98 0C23.32 0 0 23.32 0 51.98s23.32 51.98 51.98 51.98 51.98-23.32 51.98-51.98S80.64 0 51.98 0Zm0 100.63c-26.87 0-48.65-21.78-48.65-48.65S25.11 3.32 51.98 3.32s48.65 21.78 48.65 48.66-21.78 48.65-48.65 48.65Z"
-                                                        class="cls-1" /><path
-                                                        d="M69.02 24.81c-4.71-4.71-10.88-7.06-17.04-7.06s-12.34 2.35-17.04 7.06C25.53 34.22 24.29 47.52 33.42 61c4.63 6.85 18.57 23.97 18.57 23.97S65.92 67.84 70.56 61c9.13-13.49 7.89-26.78-1.52-36.19ZM51.98 57.05c-8.01 0-14.51-6.49-14.51-14.51s6.49-14.51 14.51-14.51 14.51 6.49 14.51 14.51S60 57.05 51.98 57.05Z"
-                                                        class="cls-1" /></g></svg>
-                                        </a>
-
-                                    </li>
-                                </ul>
-                            </li>
                         </ul>
                     </div>
                 </div>
 
             </div>
+
         </footer>
+        <div class="flex text-white bg-sky-900 py-4 justify-center">Copyright ©
+            2025 美德美學牙醫</div>
 
         <!-- HTML -->
         <button class="scroll-to-top" onclick="scrollToTop()">
