--- a/team.html
+++ b/team.html
@@ -25,35 +25,32 @@
     </head>
     <body class="font-light tracking-wider text-gray-600 leading-8 bg-gray-50">
         <header
-            style="background: url(https://images.pexels.com/photos/7723391/pexels-photo-7723391.jpeg) center/cover; height: 300px;"
+            style="background: url(./img/team_banner.png) top/cover; height:
+            700px;"
             class="relative text-white header-bg-img bg-cover">
             <div
-                class="max-w-4xl top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2">
+                class="max-w-4xl top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 flex flex-col items-center">
                 <h1
-                    class="text-yellow-500 text-4xl mb-8 text-center z-50 font-medium">醫療團隊
+                    class=" text-4xl mb-8  z-50 font-medium">關於我們
                 </h1>
+                <a href="#"
+                    class="rounded-xl px-8 py-2 bg-darkskin text-white font-medium">立即預約</a>
             </div>
         </header>
 
         <section class="container max-w-5xl mx-auto py-8 bg-white px-8">
-            <h2
-                class="py-4 mb-8 text-white bg-sky-600 text-center text-3xl tracking-widest"
-                style="background: #588DD6;
-background: linear-gradient(90deg, rgba(88, 141, 214, 1) 0%, rgba(133, 204, 250, 1) 100%);">美德美學牙醫診所
-                院長</h2>
+
             <div class="flex flex-wrap">
                 <div class="w-1/2 px-4">
+                    <img src="./img/homepage_院長.jpg" alt
+                        class="rounded-xl shadow-xl">
+                </div>
+                <div class="w-1/2 px-4">
+                    <p
+                        class="text-xl font-semibold tracking-tight text-skin sm:text-3xl mb-2">院長</p>
                     <h2
-                        class="text-2xl font-medium pt-8 pb-4 text-sky-600 border-b border-sky-600 tracking-wider">董昱彥
+                        class="text-3xl font-semibold tracking-tight text-skin sm:text-5xl mb-8 border-b-2 pb-4 border-skin">董昱彥
                         醫師</h2>
-                    <p class=" mt-4">從小對藝術就非常有興趣, 除了學術課業之外, 各種藝術創作, 繪畫,
-                        攝影 音樂等都為強項。 這也在日後對於董醫師對牙齒與微笑美學的標準 奠定了很重要的基礎。
-                        因為外文能力佳 所以各種國際進修課程都得心應手
-                        所以對各個專業的學習跟進修都非常認真鑽研。也因為對法國餐酒文化的喜愛, 在因緣際會下取得法國五大酒莊之首 拉菲
-                        的台灣代理( 拉菲·羅斯柴爾德酒莊,Domain Barons de Rothchild)。
-                        綜合了專業和品味 在台北美德為大家帶來不一樣的笑容。</p>
-                    <h3
-                        class="text-white bg-sky-400 px-6 py-2 inline-block my-6">經歷</h3>
                     <ul class="list-disc pl-4 text-xm">
                         <li>日本東京齒科大學 Kenko's S&E LH矯正專精課程</li>
                         <li>台灣-南加州牙周植牙研究中心認證醫師</li>
@@ -68,60 +65,9 @@ background: linear-gradient(90deg, rgba(88, 141, 214, 1) 0%, rgba(133, 204, 250,
                         <li>美國NYU Linhart DIO數位牙醫學院認證醫師</li>
                     </ul>
                 </div>
-                <div class="w-1/2 px-4">
-                    <img src="./img/homepage_院長.png" alt
-                        class="rounded-xl shadow-xl">
-                </div>
+
             </div>
 
-            <h2
-                class="py-4 mt-16 mb-8 text-white bg-sky-600 text-center text-3xl tracking-widest"
-                style="background: #588DD6;
-background: linear-gradient(90deg, rgba(88, 141, 214, 1) 0%, rgba(133, 204, 250, 1) 100%);">美德美學牙醫診所
-                醫師</h2>
-            <div class="flex flex-wrap">
-                <div class="w-1/2 px-4">
-                    <h2
-                        class="text-2xl font-medium pt-8 pb-4 text-sky-600 border-b border-sky-600 tracking-wider">朱裕華
-                        醫師</h2>
-                    <h3
-                        class="text-white bg-sky-400 px-6 py-2 inline-block my-6">學歷
-                    </h3>
-                    <ul class="list-disc pl-4 text-xm">
-                        <li>亞洲大學健康產業管理學系博士</li>
-                        <li>國防醫學院牙醫學碩士</li>
-                        <li>日高雄醫學大學牙醫學士</li>
-                        <li>美國賓州大學植牙輔助美容重建牙醫學專科證書</li>
-                        <li>美國植牙贗復專科學會最高榮譽 AAIP Mastership</li>
-                        <li>國際植牙專科醫師學會最高榮譽 ICOI Diplomate</li>
-                        <li>國際口腔顎面外科專科醫師學會 IAOMS Fellow</li>
-                    </ul>
-
-                    <h3
-                        class="text-white bg-sky-400 px-6 py-2 inline-block my-6">經歷
-                    </h3>
-                    <ul class="list-disc pl-4 text-xm">
-                        <li>台灣牙醫植體醫學會(TAID)-第五屆理事長</li>
-                        <li>國際口腔種植醫師學會(ICOI Taiwan)-2017理事長</li>
-                        <li>中華民國口腔植體學會(AOIT)-第十屆~十一屆理事長</li>
-                        <li>中華民國口腔植體專科醫師、教育部部定講師</li>
-                        <li>前中山醫學大學附設醫學中心口腔外科主治醫師</li>
-                        <li>前行政院衛生署台中醫院兼任主治醫師</li>
-                        <li>前公保中心牙科兼任主治醫師</li>
-                        <li>前中山醫學大學牙醫系講師</li>
-                        <li>前中台科技大學牙技系、放射系兼任講師</li>
-                        <li>中華民國口腔植體學會理事暨資訊主委</li>
-                        <li>台灣牙醫植體醫學會常務理事暨期刊主委</li>
-                        <li>台中市牙醫師公會理事暨公關主委、出版諮議</li>
-                        <li>中華民國口腔植體學會植牙專科醫師甄審委員</li>
-                        <li>國際口腔種植醫師學會(ICOI)- 植牙專科醫師甄審委員</li>
-                    </ul>
-                </div>
-                <div class="w-1/2 px-4">
-                    <img src="https://placehold.co/600x400/EEE/31343C" alt
-                        class="rounded-xl shadow-xl">
-                </div>
-            </div>
         </section>
     </body>
 </html>
