--- a/contact.html
+++ b/contact.html
@@ -19,10 +19,11 @@
 
         <section class="container max-w-5xl mx-auto py-8">
             <div class="flex flex-wrap">
-                <div class="w-1/2">
-                    <img src="https://placehold.co/400x600/" alt>
+                <div class="w-1/2 px-4">
+                    <img src="./img/contact-page.png" alt
+                        class="rounded-xl shadow-xl">
                 </div>
-                <div class="w-1/2">
+                <div class="w-1/2 px-4">
                     <div class="mb-8">
                         <h2
                             class="mb-4 text-skin text-3xl my-8 font-semibold">初診資料搜集</h2>
